ukui-bluetooth (1.0.0-1kylin1k44) v101; urgency=medium

  * Bug  :
    - bug#52807 :没有蓝牙功能的机器，蓝牙被会话管理器拉起，并异常退出返回退出码255
  * Task :
  * Other:
    - 关闭蓝牙时更新rfkill的状态

 -- guang tang <tangguang@kylinos.cn>  Sat, 08 May 2021 14:06:27 +0800

ukui-bluetooth (1.0.0-1kylin1k43) v101; urgency=medium

  * Bug  :
    - bug#50581: 蓝牙-托盘窗口界面优化
  * Task :
  * Other:

 -- guang tang <tangguang@kylinos.cn>  Thu, 06 May 2021 15:58:31 +0800

ukui-bluetooth (1.0.0-1kylin1k42) v101; urgency=medium

  * Bug  : 
    - bug#50759：设备标题描述和下方设备进行颜色区分(by dengtuo)
    - bug#51110: 英文环境200%缩放，蓝牙发送文件框显示异常(by guangtang)
  * Task :
  * Other:

 -- guang tang <tangguang@kylinos.cn>  Wed, 28 Apr 2021 16:35:45 +0800

ukui-bluetooth (1.0.0-1kylin1k41) v101; urgency=medium

  * Bug  : bug#50765
  * Task :
  * Other:

 -- guang tang <tangguang@kylinos.cn>  Sun, 25 Apr 2021 16:35:45 +0800

ukui-bluetooth (1.0.0-1kylin1k40) v101; urgency=medium

  * bug  : 
  * task :
  * other: 调整托盘菜单的样式

 -- guang tang <tangguang@kylinos.cn>  Fri, 23 Apr 2021 19:44:04 +0800

ukui-bluetooth (1.0.0-1kylin1k39) v101; urgency=medium

  * Fixed : bug#48323

 -- guang tang <tangguang@kylinos.cn>  Wed, 21 Apr 2021 11:30:40 +0800

ukui-bluetooth (1.0.0-1kylin1k38) v101; urgency=medium

  * Feat : 
    - 接入日志框架
    - 添加软件描述

 -- guang tang <tangguang@kylinos.cn>  Mon, 19 Apr 2021 06:42:32 +0800

ukui-bluetooth (1.0.0-1kylin1k37) v101; urgency=medium

  * 添加根据蓝牙状态改变托盘图标

 -- guang tang <tangguang@kylinos.cn>  Thu, 15 Apr 2021 16:16:39 +0800

ukui-bluetooth (1.0.0-1kylin1k36) v101; urgency=medium

  * 添加蓝牙配对蓝牙键盘输入PIN错误后提示对话框
  * 添加蓝牙发送文件没有配对的设备时提示信息

 -- guang tang <tangguang@kylinos.cn>  Wed, 31 Mar 2021 16:45:32 +0800

ukui-bluetooth (1.0.0-1kylin1k35) v101; urgency=medium

  * 蓝牙界面字体显示不全(bug#43968)

 -- guang tang <tangguang@kylinos.cn>  Wed, 24 Mar 2021 15:15:01 +0800

ukui-bluetooth (1.0.0-1kylin1k34) v101; urgency=medium

  * 修改蓝牙键盘配对时连接框翻译

 -- guang tang <tangguang@kylinos.cn>  Mon, 22 Mar 2021 17:35:58 +0800
