@@ -80,7 +80,6 @@ public:
 
     void Connect_the_last_connected_device();
     void adapterChangeFUN();
-    void createPairDeviceFile();
     void writeDeviceInfoToFile(const QString& devAddress,const QString& devName, const BluezQt::Device::Type type);
     void removeDeviceInfoToFile(const QString& devAddress);
     QStringList getDeviceConnectTimeList();
